Fixing bug with infobox and helpbox bullets not showing [Issue MP-86]

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -237,6 +237,11 @@ hr {
     list-style-type: none;
 }
 
+    .questions helpbox ul,
+    .questions infobox ul {
+        list-style-type: disc;
+    }
+
 .questions input {
     display: inline-block;
     margin-right: -2em;
